environments/gloo-gateway/gateway-api/live/httpbin-app/base/external-service/httpbin-external-delegate-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin-external-delegate-route
  namespace: httpbin
spec:
  rules:
    - matches:
      - path:
          type: Exact
          value: /anything/migration
      backendRefs:
        - name: httpbin-external
          kind: Upstream
          group: gloo.solo.io
          weight: 50
        - name: httpbin
          port: 8000
          weight: 50
